Fix page overflow issue on the right side of the screen.

--- a/src/utils/style/css/normalize.css
+++ b/src/utils/style/css/normalize.css
@@ -8,6 +8,10 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
+ * {
+   max-width: 100%;
+ }
+
  html {
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
